[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Squada2.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Squada.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://SquadaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 2
font_data = SubResource( 1 )

[node name="Leaderboard" type="Node2D"]
position = Vector2( 25, 23 )
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScoreLabel" type="Label" parent="Control"]
margin_left = 67.6227
margin_top = 43.7078
margin_right = 384.623
margin_bottom = 116.708
custom_fonts/font = ExtResource( 2 )
text = "Your score:"
align = 1

[node name="ScoreValue" type="Label" parent="Control"]
margin_left = 67.6226
margin_top = 118.973
margin_right = 384.623
margin_bottom = 191.973
custom_fonts/font = ExtResource( 2 )
text = "00000000"
align = 1

[node name="PlayerName" type="TextEdit" parent="Control"]
margin_left = 67.6227
margin_top = 290.973
margin_right = 384.623
margin_bottom = 342.973
hint_tooltip = "Your name!"
custom_fonts/font = ExtResource( 3 )
text = "Your Name"

[node name="Submit" type="Button" parent="Control"]
margin_left = 67.6227
margin_top = 355.973
margin_right = 382.623
margin_bottom = 402.973
custom_fonts/font = ExtResource( 3 )
text = "Submit Score to Leaderboard"

[node name="HTTPRequestGET" type="HTTPRequest" parent="Control"]

[node name="HTTPRequestPOST" type="HTTPRequest" parent="Control"]

[node name="Top10Label" type="Label" parent="Control"]
margin_left = 427.0
margin_top = 43.0
margin_right = 938.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "TOP 10"
align = 1

[node name="Top10Value" type="Label" parent="Control"]
margin_left = 433.0
margin_top = 133.0
margin_right = 950.0
margin_bottom = 671.0
rect_scale = Vector2( 0.989494, 0.922444 )
custom_fonts/font = SubResource( 2 )
align = 1
[connection signal="pressed" from="Control/Submit" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="Control/HTTPRequestGET" to="." method="_on_HTTPRequestGET_request_completed"]
[connection signal="request_completed" from="Control/HTTPRequestPOST" to="." method="_on_HTTPRequestPOST_request_completed"]
